Remove a CPAN dependency
Rex already uses List::Util for "first" and "max" so use it instead of
List::MoreUtils.

--- a/dist.ini
+++ b/dist.ini
@@ -71,6 +71,7 @@ Net::SSH2 = 0
 
 [Prereqs]
 perl = 5.010001
+List::Util = 1.45       ; First version with uniqstr
 YAML = != 1.25
 
 [Prereqs / DevelopRequires]
