--- a/dist.ini
+++ b/dist.ini
@@ -74,6 +74,8 @@ perl = 5.010001
 YAML = != 1.25
 
 [Prereqs / DevelopRequires]
+Perl::Critic::Freenode = 0.032
+Perl::Critic::TooMuchCode = 0.13
 Test::Kwalitee = 0
 Test::PerlTidy = 0
 Test::Pod = 0
