Cache perlcritic history in Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ jobs:
         directories:
           - ${PERLBREW_ROOT}/perls/${PERLBREW_PERL}/lib
           - ${PERLBREW_ROOT}/perls/${PERLBREW_PERL}/bin
+          - /tmp/cache
       addons:
         apt:
           packages:
