--- a/dist.ini
+++ b/dist.ini
@@ -133,3 +133,7 @@ revision = BUG FIXES, DOCUMENTATION, REVISION
 [Run::AfterRelease]
 run = encoding=$(file -bi ChangeLog | awk -F charset= '{print $2}'); piconv -f $encoding -t utf8 ChangeLog > ChangeLog.utf8
 run = mv ChangeLog.utf8 ChangeLog
+
+[Git::Tag]
+tag_format = %v
+tag_message =
