--- a/dist.ini
+++ b/dist.ini
@@ -9,6 +9,7 @@ copyright_holder = Jan Gehring
 -remove = GatherDir
 -remove = PruneCruft
 -remove = ExtraTests
+-remove = UploadToCPAN
 
 [Git::GatherDir]
 include_dotfiles = 1
@@ -129,6 +130,8 @@ change_file = ChangeLog
 major = API CHANGES, MAJOR
 minor = NEW FEATURES, ENHANCEMENTS, MINOR
 revision = BUG FIXES, DOCUMENTATION, REVISION
+
+[FakeRelease]
 
 [Run::AfterRelease]
 run = encoding=$(file -bi ChangeLog | awk -F charset= '{print $2}'); piconv -f $encoding -t utf8 ChangeLog > ChangeLog.utf8
