--- a/dist.ini
+++ b/dist.ini
@@ -120,7 +120,7 @@ changelog = ChangeLog
 [NextRelease]
 filename = ChangeLog
 time_zone = UTC
-format = %v%t %{yyyy-MM-dd}d %U <%E>
+format = %v %{yyyy-MM-dd}d %U <%E>
 
 [PreviousVersion::Changelog]
 filename = ChangeLog
@@ -137,12 +137,8 @@ revision = BUG FIXES, DOCUMENTATION, REVISION
 run = encoding=$(file -bi ChangeLog | awk -F charset= '{print $2}'); piconv -f $encoding -t utf8 ChangeLog > ChangeLog.utf8
 run = mv ChangeLog.utf8 ChangeLog
 
-[Git::Commit]
-changelog = ChangeLog
-commit_msg = Release %v%n%n%c
-
 [Git::Tag]
 tag_format = %v
-tag_message = %v%n%n%c
+tag_message =
 
 [Git::Push]
