--- a/dist.ini
+++ b/dist.ini
@@ -119,7 +119,7 @@ changelog = ChangeLog
 [NextRelease]
 filename = ChangeLog
 time_zone = UTC
-format = %v %{yyyy-MM-dd}d %U <%E>
+format = %v%t %{yyyy-MM-dd}d %U <%E>
 
 [PreviousVersion::Changelog]
 filename = ChangeLog
