Automatically commit changelog upon release

--- a/dist.ini
+++ b/dist.ini
@@ -134,6 +134,10 @@ revision = BUG FIXES, DOCUMENTATION, REVISION
 run = encoding=$(file -bi ChangeLog | awk -F charset= '{print $2}'); piconv -f $encoding -t utf8 ChangeLog > ChangeLog.utf8
 run = mv ChangeLog.utf8 ChangeLog
 
+[Git::Commit]
+changelog = ChangeLog
+commit_msg = Release %v%n%n%c
+
 [Git::Tag]
 tag_format = %v
 tag_message =
