Annotate tags upon release

--- a/dist.ini
+++ b/dist.ini
@@ -139,7 +139,8 @@ changelog = ChangeLog
 commit_msg = Release %v%n%n%c
 
 [Git::Tag]
+changelog = ChangeLog
 tag_format = %v
-tag_message =
+tag_message = %v%n%n%c
 
 [Git::Push]
