Add option to reset perlcritic history

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ jobs:
           packages:
             - libmagic-dev
       before_install:
+        - if [ -n ${PERLCRITIC_HISTORY_RESET} ]; then rm -v /tmp/cache/.perlcritic-history; fi
         - cpanm Perl::Critic Perl::Tidy
         - mkdir ~/.dzil
         - export AUTHOR_EMAIL="$(git log -1 ${TRAVIS_COMMIT} --pretty='%aE')"
