--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -90,6 +90,13 @@ jobs:
         with:
           name: build_results
           path: build
+      - name: Save cpanm logs upon failure
+        if: ${{ ! success() }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: cpan_log_${{ github.job }}
+          path: .cpanm/work/*/build.log
+          retention-days: 5
 
   linux:
     needs: build
@@ -108,6 +115,13 @@ jobs:
         run: cpanm --installdeps --with-all-features .
       - name: Run tests
         run: prove --timer --lib --recurse --jobs $(nproc) --shuffle t
+      - name: Save cpanm logs upon failure
+        if: ${{ ! success() }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: cpan_log_${{ github.job }}
+          path: .cpanm/work/*/build.log
+          retention-days: 5
 
   macos:
     needs: build
@@ -126,6 +140,13 @@ jobs:
         run: cpanm --installdeps --with-all-features .
       - name: Run tests
         run: prove --timer --lib --recurse --jobs $(sysctl -n hw.ncpu) --shuffle t
+      - name: Save cpanm logs upon failure
+        if: ${{ ! success() }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: cpan_log_${{ github.job }}
+          path: .cpanm/work/*/build.log
+          retention-days: 5
 
   windows:
     needs: build
@@ -148,3 +169,10 @@ jobs:
         run: cpanm Net::SSH2
       - name: Run tests
         run: prove --timer --lib --recurse --jobs $(nproc) --shuffle t
+      - name: Save cpanm logs upon failure
+        if: ${{ ! success() }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: cpan_log_${{ github.job }}
+          path: .cpanm/work/*/build.log
+          retention-days: 5
