--- a/dist.ini
+++ b/dist.ini
@@ -35,7 +35,7 @@ repository.url  = https://github.com/RexOps/Rex.git
 repository.web  = https://github.com/RexOps/Rex
 repository.type = git
 x_twitter       = https://twitter.com/RexOps
-x_IRC           = irc://irc.freenode.net/#rex
+x_IRC           = ircs://irc.oftc.net/#rexops
 
 [MetaJSON]
 
