--- a/dist.ini
+++ b/dist.ini
@@ -75,7 +75,7 @@ perl = 5.010001
 YAML = != 1.25
 
 [Prereqs / DevelopRequires]
-Perl::Critic::Freenode = 0.032
+Perl::Critic::Community = 1.000
 Perl::Critic::TooMuchCode = 0.13
 Test::Kwalitee = 0
 Test::PerlTidy = 0
