Collect code coverage of test files

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -87,7 +87,7 @@ jobs:
         if: ${{ github.event_name != 'schedule' }}
         run: |
           cd build
-          HARNESS_PERL_SWITCHES=-MDevel::Cover=+ignore,^t/ prove --timer --lib --recurse --jobs $(nproc) --shuffle t
+          HARNESS_PERL_SWITCHES=-MDevel::Cover prove --timer --lib --recurse --jobs $(nproc) --shuffle t
       - name: Run tests without coverage
         if: ${{ github.event_name == 'schedule' }}
         run: |
