--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -52,8 +52,13 @@ jobs:
           restore-keys: cache-perlcritic-history-
       - name: Log perl information
         run: perl -V
+      - name: Add upstream MySQL APT repository
+        run: |
+          wget https://dev.mysql.com/get/mysql-apt-config_0.8.20-1_all.deb
+          sudo dpkg -i mysql-apt-config_0.8.20-1_all.deb
+          sudo apt-get update
       - name: Install packages
-        run: sudo apt-get install -y libmagic-dev default-mysql-server rsync aspell
+        run: sudo apt-get install -y libmagic-dev mysql-server rsync aspell
       - name: Install build dependencies
         run: cpanm --local-lib ${GITHUB_WORKSPACE}/local Dist::Zilla Perl::Critic Perl::Tidy Devel::Cover::Report::Coveralls Pod::Coverage::CountParents
       - name: Configure Dist::Zilla
