Unify test jobs across operating systems

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -137,9 +137,25 @@ jobs:
       - name: Run extra tests
         run: prove --timer --lib --recurse --jobs $(nproc) --shuffle xt/
 
-  linux:
+  tests:
     needs: build
-    runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - ubuntu
+          - macos
+        perl:
+          - latest
+        distribution:
+          - default
+        include:
+          - os: windows
+            perl: latest
+            distribution: strawberry
+
+    runs-on: ${{ matrix.os }}-latest
 
     steps:
       - name: Download build results
@@ -147,44 +163,19 @@ jobs:
         with:
           name: build_results
       - name: Setup Perl
-        uses: shogo82148/actions-setup-perl@v1
-      - name: Install dependencies
-        run: cpanm --installdeps --with-all-features .
-      - name: Run tests
-        run: prove --timer --lib --recurse --jobs $(nproc) --shuffle t
-
-  macos:
-    needs: build
-    runs-on: macOS-latest
-
-    steps:
-      - name: Download build results
-        uses: actions/download-artifact@v3
-        with:
-          name: build_results
-      - name: Setup Perl
-        uses: shogo82148/actions-setup-perl@v1
-      - name: Install dependencies
-        run: cpanm --installdeps --with-all-features .
-      - name: Run tests
-        run: prove --timer --lib --recurse --jobs $(sysctl -n hw.ncpu) --shuffle t
-
-  windows:
-    needs: build
-    runs-on: windows-latest
-
-    steps:
-      - name: Download build results
-        uses: actions/download-artifact@v3
-        with:
-          name: build_results
-      - name: Setup Perl
+        id: perl
         uses: shogo82148/actions-setup-perl@v1
         with:
-          distribution: strawberry
+          perl-version: ${{ matrix.perl }}
+          distribution: ${{ matrix.distribution }}
       - name: Install dependencies
-        run: cpanm --installdeps --with-all-features --without-feature=custom_output --without-feature=rsync .
-      - name: Install OS-specific dependency
-        run: cpanm Net::SSH2
+        uses: knicknic/os-specific-run@v1.0.3
+        with:
+          macos: cpanm --installdeps --with-all-features .
+          linux: cpanm --installdeps --with-all-features .
+          windows: cpanm --installdeps --with-all-features --without-feature=custom_output --without-feature=rsync .
+      - name: Get number of processors
+        id: cores
+        uses: SimenB/github-actions-cpu-cores@v1
       - name: Run tests
-        run: prove --timer --lib --recurse --jobs $(nproc) --shuffle t
+        run: prove --timer --lib --recurse --jobs ${{ steps.cores.outputs.count }} --shuffle t/
