--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -51,11 +51,13 @@ jobs:
         run: dzil authordeps | cpanm --local-lib ${GITHUB_WORKSPACE}/local
       - name: Build dist
         run: dzil build --no-tgz --in build
+      - name: Create build tarball
+        run: tar cvf build.tar -C build .
       - name: Upload build results
         uses: actions/upload-artifact@v3
         with:
-          name: build_results
-          path: build
+          name: build.tar
+          path: build.tar
 
   coverage:
     if: ${{ github.event_name != 'schedule' }}
@@ -70,7 +72,9 @@ jobs:
       - name: Download build results
         uses: actions/download-artifact@v3
         with:
-          name: build_results
+          name: build.tar
+      - name: Extract build tarball
+        run: tar xvf build.tar
       - name: Setup Perl
         id: perl
         uses: shogo82148/actions-setup-perl@v1
@@ -109,7 +113,9 @@ jobs:
       - name: Download build results
         uses: actions/download-artifact@v3
         with:
-          name: build_results
+          name: build.tar
+      - name: Extract build tarball
+        run: tar xvf build.tar
       - name: Install packages
         run: sudo apt-get install -y aspell
       - name: Setup Perl
@@ -158,7 +164,9 @@ jobs:
       - name: Download build results
         uses: actions/download-artifact@v3
         with:
-          name: build_results
+          name: build.tar
+      - name: Extract build tarball
+        run: tar xvf build.tar
       - name: Setup Perl
         id: perl
         uses: shogo82148/actions-setup-perl@v1
