Accept Rex::Logger package variables
Using the sole interface of Rex::Logger should not result in a critic
violation.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -5,3 +5,6 @@ theme = -freenode
 
 [Subroutines::ProhibitUnusedPrivateSubroutines]
 private_name_regex = _(?!_)\w+
+
+[Variables::ProhibitPackageVars]
+add_packages = Rex::Logger
