Accept missing trailing comma in function calls
A trailing comma in function calls at the end of argument list might
misleadingly suggest that the function may take more arguments.

Multiline test functions often gain from the lack of such trailing
comma.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -3,6 +3,9 @@ theme = -freenode
 
 [-CodeLayout::RequireTidyCode]
 
+[CodeLayout::RequireTrailingCommaAtNewline]
+except_function_calls = 1
+
 [Subroutines::ProhibitUnusedPrivateSubroutines]
 private_name_regex = _(?!_)\w+
 
