Use human-friendly names for automated tests

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -170,6 +170,7 @@ jobs:
             perl: latest
             distribution: strawberry
 
+    name: ${{ matrix.perl }} 🐪 ${{ matrix.os }}
     runs-on: ${{ matrix.os }}-latest
 
     steps:
