Avoid testing on missing Strawberry Perl versions

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -177,6 +177,13 @@ jobs:
           - '5.14'
           - '5.12'
           - '5.10'
+        exclude:
+          - os: windows
+            perl: '5.34'
+          - os: windows
+            perl: '5.12'
+          - os: windows
+            perl: '5.10'
 
     name: ${{ matrix.perl }} 🐪 ${{ matrix.os }}
     runs-on: ${{ matrix.os }}-latest
