Avoid duplicate Strawberry Perl tests
The current latest Strawberry Perl version is 5.32.

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -181,6 +181,8 @@ jobs:
           - os: windows
             perl: '5.34'
           - os: windows
+            perl: '5.32'
+          - os: windows
             perl: '5.12'
           - os: windows
             perl: '5.10'
