--- a/dist.ini
+++ b/dist.ini
@@ -81,6 +81,9 @@ Test::Kwalitee = 0
 Test::PerlTidy = 0
 Test::Pod = 0
 
+[Prereqs / TestRequires]
+perl = 5.012
+
 [OptionalFeature / custom_output]
 -description = Support custom output formatters
 IPC::Shareable = 0
