Accept using version strings

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -9,5 +9,7 @@ except_function_calls = 1
 [Subroutines::ProhibitUnusedPrivateSubroutines]
 private_name_regex = _(?!_)\w+
 
+[-ValuesAndExpressions::ProhibitVersionStrings]
+
 [Variables::ProhibitPackageVars]
 add_packages = Rex::Logger
