--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -164,6 +164,7 @@ jobs:
           - windows
         perl:
           - latest
+          - '5.36'
           - '5.34'
           - '5.32'
           - '5.30'
@@ -177,6 +178,8 @@ jobs:
           - '5.14'
           - '5.12'
         exclude:
+          - os: windows
+            perl: '5.36' # not released yet
           - os: windows
             perl: '5.34' # not released yet
           - os: windows
