Simplify package list diff tests

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -13,7 +13,7 @@ private_name_regex = _(?!_)\w+
 private_name_regex = _(?!_)\w+
 
 [TooMuchCode::ProhibitDuplicateLiteral]
-allowlist = 'vim' 1.0 'rex' 'libssh2-1' 'mc'
+allowlist = 'vim' 1.0 'rex' 0.52.0 'libssh2-1' 0.32.1 'mc' 2.0
 
 [-ValuesAndExpressions::ProhibitConstantPragma]
 
