--- a/dist.ini
+++ b/dist.ini
@@ -62,6 +62,9 @@ Net::SFTP::Foreign = 0
 Net::SSH2 = 0
 Win32::Console::ANSI = 0
 
+[OSPrereqs / darwin]
+IO::Pty = != 1.18
+
 [OurPkgVersion]
 overwrite = 1
 
