Add missing optional test dependency
Test::mysqld now requires either DBD::mysql or DBD::MariaDB.

--- a/dist.ini
+++ b/dist.ini
@@ -112,6 +112,7 @@ File::LibMagic = 0
 -relationship = suggests
 -description = Test MySQL commands
 Test::mysqld = 0
+DBD::mysql = 0
 
 [Test::MinimumVersion]
 max_target_perl = 5.12.5
