Recommend Parallel::ForkManager as an option

--- a/dist.ini
+++ b/dist.ini
@@ -97,6 +97,11 @@ DBI = 0
 -description = Support describing host groups in XML format
 XML::LibXML = 0
 
+[OptionalFeature / parallel_forkmanager]
+-description = Support Parallel::ForkManager to distribute tasks
+-relationship = recommends
+Parallel::ForkManager = 0
+
 [OptionalFeature / rsync]
 -description = Support rsync tasks
 Expect = 0
